--- a/Dockerfile.rocker
+++ b/Dockerfile.rocker
@@ -7,7 +7,7 @@ RUN install2.r --skipinstalled \
     shiny rmarkdown flexdashboard plyr dplyr purrr data.table RColorBrewer \
     ggplot2 ggpubr readxl rstatix plotrix car Rmisc tidyr devtools ggpattern \
     lme4 emmeans sjstats lmerTest MuMIn svglite jsonlite pwr lme4 DT \
-    signal ggstatsplot ggside zoo gridExtra ggExtra\
+    signal ggstatsplot ggside zoo gridExtra ggExtra dbscan plotly\
     && rm -rf /tmp/downloaded_packages \
     && strip /usr/local/lib/R/site-library/*/libs/*.so
 
